--- a/3framework-overview.tex
+++ b/3framework-overview.tex
@@ -11,9 +11,9 @@ In this section, a high-level overview of the fundamental processes along with t
 The groundwork described in this work abides by the typical top-down approach used in Intelligent Transportation System (ITS) where the video data is subjected to background subtraction, followed by blob filtering, vehicle detection as well as vehicle tracking, as thoroughly described in \cite{lim2017}.
 The semantic information of the vehicle blobs are then extracted and stored in the database.
 
-Now, with the vehicle-specific semantics stored in the database, retrieval engines are designed to enable users to easily retrieve the stored information. Both retrieval engines feature a graphical user interface (GUI) that allows users to enter the queries by drawing the desired trajectory on the search interface as well as providing other crucial information which would assist in identifying the targeted video sub-sequence or \emph{shot}.
+Now, with the vehicle-specific semantics stored in the database, retrieval engines are designed to enable users to easily retrieve the stored information. The retrieval engines feature a graphical user interface (GUI) that allow users to enter the queries by drawing the desired trajectory on the search interface and provide other crucial information which would assist in identifying the targeted video sub-sequence or \emph{shot}.
 
-However, as mentioned in the scope of work (Section \ref{subsec:scope}), the bounding box of the vehicles are assumed to have been obtained prior to the semantic extraction task. Hence, the semantic extraction and video retrieval processes are the central emphasis of this work.
+However, as mentioned in the scope of thesis (Section \ref{subsec:scope}), the bounding box of the vehicles are assumed to have been obtained prior to the semantic extraction task. Hence, the semantic extraction and video retrieval processes are the central emphasis of this thesis.
 
 \begin{figure}[hbt!]\centering
 \includegraphics[width=.9\textwidth]{image/new/framework_new.PNG}
@@ -22,14 +22,14 @@ However, as mentioned in the scope of work (Section \ref{subsec:scope}), the bou
 \end{figure}
 
 In this thesis, a framework is suggested and used for the vehicle semantic extraction and vehicle semantic retrieval tasks.
-The proposed methods are developed in two cascading phases (see~\ref{fig:proposedmethodoverview}) with the same corresponding objective for each task.
+The proposed methods were developed in two cascading phases (see Figure ~\ref{fig:proposedmethodoverview}) with the same corresponding objective for each task.
 The formulation of the idea, steps and processes involved in each phase is described in this chapter.
-On a whole, the end-to-end framework can be visualised using Figure \ref{fig:framework} where the main contribution of this work is highlighted with a yellow dashed border.
+On a whole, the end-to-end framework can be visualised using Figure ~\ref{fig:framework} where the main contribution of this thesis is highlighted with a yellow dashed border.
 
 \subsection{Phase 1: LSH-Inspired Semantic Extraction and Retrieval Technique}
 \label{subsec:lsh-intro}
-The first of the two techniques suggested in this work is the \textit{LSH-Inspired Semantic Extraction and Retrieval Technique}. Locality-Sensitive Hashing (LSH) introduced by ~\citeA{indyk1998approximate}; was originally used for devising main memory algorithms for nearest neighbor search. This technique was later used by ~\citeA{kulis2009kernelized} to embed high-dimensional features from images into low-dimensional Hamming space (dimensionality reduction) where items can be efficiently search. 
-Unlike conventional hashing techniques that aims to avoid hash collisions, LSH tries to maximise these hash collisions. When performed on a set of documents, documents with similar properties are mapped and clustered to similar locality or neighbourhood. This technique excels especially when working with high dimensional data such as video data.
+The first of the two techniques suggested in this thesis is the \textit{LSH-Inspired Semantic Extraction and Retrieval Technique}. Locality-Sensitive Hashing (LSH) as introduced by~\citeA{indyk1998approximate} was originally used for devising main memory algorithms for nearest neighbor search. This technique was later used by~\citeA{kulis2009kernelized} to embed high-dimensional features from images into low-dimensional Hamming space (dimensionality reduction) where items can be efficiently search. 
+Unlike conventional hashing techniques that aims to avoid hash collisions, LSH tries to maximise these hash collisions. When performed on a set of documents, documents with similar properties are mapped and clustered to a similar locality or neighbourhood. This technique excels especially when working with high dimensional data such as video data.
 %However, the exact implementation of LSH is not employed in this work. Instead, 
 We draw inspiration from LSH on how similar ``documents'' can be clustered. %and implemented in this phase. 
 The extracted semantics from each vehicle blobs were clustered into semantic groups consisting of 11 colours and 9 motion clusters. This concept is adopted in the proposed method with the following considerations in mind:
@@ -40,10 +40,10 @@ The extracted semantics from each vehicle blobs were clustered into semantic gro
 
 
 \subsection{Phase 2: CD-Inspired Semantic Extraction and Retrieval Technique}
-The second technique suggested in this work is the \textit{Chamfer Distance-Inspired Semantic Extraction and Retrieval Technique}.
+The second technique suggested in this thesis is the \textit{Chamfer Distance-Inspired Semantic Extraction and Retrieval Technique}.
 Chamfer Distance (CD) is one of the many distance measures %(see Section \ref{section:distancemeasures})
-introduced by mathematicians and researchers. Chamfer Distance, as introduced by \cite{barrow1977parametric}, was originally designed to match images by comparing the shapes of two collections of shape fragments.
-However, in this work, the use of CD was adapted to suit the research problem of comparing vehicle trajectories' shapes. While the implementation of CD measure in this framework has its advantages, it also comes with certain drawbacks. The considerations taken when designing this technique is as follows:
+introduced by mathematicians and researchers. Chamfer Distance, as introduced by~\citeA{barrow1977parametric}, was originally designed to match images by comparing the shapes of two collections of shape fragments.
+However, in this thesis, the use of CD was adapted to suit the research problem of comparing vehicle trajectories' shapes. While the implementation of CD measure in this framework has its advantages, it also comes with certain drawbacks. The considerations taken when designing this technique is as follows:
 \begin{enumerate}
     \item The use of Chamfer Distance to compare trajectories allows the retrieval technique to search from a wider range. While this comes with additional computational costs which are undesirable, the increased in robustness outweighs the drawbacks. Along with that, effective time and date filtering could potentially reduce the number of records, hence, further reducing the computational cost.
     \item Effective ranking of results is a desirable characteristic in any retrieval engine. As Chamfer Distance produces a distance score for every pair of trajectories compared, this score can be used to sort the results in an intuitive manner where results of higher similarity or resemblance would appear higher in the ranked retrieval results.
@@ -101,7 +101,7 @@ This data acquisition setup was left to record data over the course of several m
 \section{Experimental Methodology}
 \label{sec:expmethodology}
 
-In the subsequent chapters, the detailed descriptions of the proposed vehicle semantic extraction algorithm as well as the retrieval techniques will be provided. This section briefly describes the methodology and the experimental setup to provide an overview of how the experiments were performed in this work.
+In the subsequent chapters, the detailed descriptions of the proposed vehicle semantic extraction algorithm as well as the retrieval techniques will be provided. This section briefly describes the methodology and the experimental setup to provide an overview of how the experiments were performed in this thesis.
 
 As the performance of the proposed methods is essential towards end-users, each of the proposed algorithm in the framework was evaluated with the help of volunteers.
 The bounding box obtained using the Vehicle Detection and Vehicle Tracking framework proposed by \cite{lim2017} included errors. While these errors were propagated to the Vehicle Semantics Extraction and Retrieval modules, they were not overlooked nor discarded during the evaluation process. This was done intentionally to provide an end-to-end assessment of the framework.
@@ -117,7 +117,7 @@ Likewise, the experimental methodology can be divided into two phases.
 \subsection{Phase 1: LSH-Inspired Semantic Extraction and Retrieval Technique (Prototyping)}
 While the collected dataset comprised of several months of data, only two days of data (20 hours) were used for the evaluation of \versionOneRet. Several annotators were deployed to manually label and fully annotate these data. Upon completing the annotation process, the annotators would cross-check to verify the sanctity of the annotation.
 Along with that, the cross-checking allows the annotators to arrive at consensus on annotations that did not tally. The annotators were asked to take note of the following events:
-1) Number of vehicle of each colour category (11 categories, see \ref{table:colorshex}), and 2) Number of vehicles performing motion $TQ1$ \& $TQ2$ (See Figure \ref{fig:versionOneInterface}).
+1) Number of vehicle of each colour category (11 categories, see Table~\ref{table:colorshex}), and 2) Number of vehicles performing motion $TQ1$ \& $TQ2$ (See Figure \ref{fig:versionOneInterface}).
 Having fully annotated data allowed us to evaluate the performance of the proposed method using the Accuracy, Recall and $F_1$ Score metrics.
 
 \subsection{Phase 2: CD-Inspired Semantic Extraction and Retrieval Technique (Full Experiment)}
@@ -126,7 +126,7 @@ During the \textbf{Phase 1} experiment, it was noted that the entire annotation 
 Typical with any large-scale retrieval engine of all intents and purposes, it is not feasible to annotate a huge amount of ground truth manually as it takes an enormous effort which is time-consuming.
 Hence in \textbf{Phase 2}, semantics from one month of data was extracted, retrieved and evaluated without the manual annotations of any events.
 
-As the final output of this work is an end-user facing retrieval system, the evaluation process took on an empirical user study approach. This unbiased approach provided the volunteers with full control and freedom to perform any kinds of query over the search interface.
+As the final output of this proposed method is an end-user facing retrieval system, the evaluation process took on an empirical user study approach. This unbiased approach provided the volunteers with full control and freedom to perform any kinds of query over the search interface.
 Using this setup, a group of six volunteers were performed a total of 11 queries on the retrieval engine for both the vehicle colour and trajectory semantics.
 %of the vehicles and provide relevance score for each retrieved results.
 Based on each query, the volunteers were tasked to provide relevance score($REL$) and evaluation for each of the randomly ordered retrieved results.
